Review timing and content of software updates notifications
A lot has changed in the world of software updates and I get the impression that our existing updates don't quite fit the new reality.
I think we've also potentially dug ourselves into a hole, where users have got habituated to receiving lots of update notifications, which they generally ignore.
It would therefore be good to review the timing and content of the notifications, with a view to making them accurate and to encourage people to pay attention to them.
Split regular and urgent updates
Elsewhere, it has been suggested that we change the logic a bit, so that:
- Updates are generally only presented once a fortnight
- Users are alerted to the presence of urgent updates immediately
Existing behaviour
Our standard notification for package-based updates is:
Software Updates Available
Important OS and application updates are ready to be installed
[Not Now] [View]
Immediate thoughts about this:
- It says "important" for every. single. one.
- It mixes availability and readiness
- It feels like we ping the user on a very steady routine - like once or twice a day, which contributes to the feeling that they are background noise you can ignore
- We say "OS and application updates" for every one, irrespective of what the update contains, which again maybe diminishes how seriously users take them
Should we be more insistent?
If we are going to batch up updates more, and we don't want users to get used to ignoring updates, one option would be to be more insistent when updates are available.
Various options to consider:
- Increase the nag factor over time. For example, the frequency of the notifications could rise to the point where they are being shown every hour.
- Have an explicit deadline by which an update should be installed: "software updates are available; you are recommended to install within 3 days". Then count down. Once the user reaches the final day, pin an urgent notification on screen and don't allow it to be removed.
- Allow the user to schedule when the update gets installed, or set a reminder for themselves. "Remind me Later".