gs-update-monitor: Review timing and content of software updates notifications

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/947